testsuite/tests/properties/invalid_new_node/not_synth/test.lkt
from common import EmptyNode, FooNode, Literal

class LiteralList: ASTList[Literal] {
    @memoized fun prop(): Literal = Literal()
}
